@@ -22,6 +22,7 @@ Wait for 2.1 if you are not willing to do testing/bug reporting.
 - blocked domains with "redirect" now also blocks related subdomains.
 - "file" is now marked as a dependency (thank Guillaume Loret)
 - "--images-mode" allow to choose at startup which images should be dowloaded (none,readable,full)
+- Support for multi-format rendering (such as RSS feeds with html elements)
 
 ## 1.10 - July 31st 2023
 - IMPORTANT : new optional dependency : python-chardet
